Resolve spacing issues (#1110)
* Remove classes that are no longer used and hide duplicate option

* Ensure underline on links only when hover active or focus

* Move close button for citation modal

* Restore facet more modal

* Fix links in footer

* Remove underline from not active links

* Restore search tip spacing

* Add back hidden button

* Align start over button to right

* Move and dedup notification close button

--- a/app/assets/stylesheets/customOverrides/constraints.scss
+++ b/app/assets/stylesheets/customOverrides/constraints.scss
@@ -32,8 +32,7 @@ DEFAULT MOBILE STYLING
   background-color: $lighter_grey;
   margin-left: 0;
   overflow-wrap: break-word;
-  justify-content: space-between;
-  align-items: center;
+  display: block;
 }
 
 
@@ -43,6 +42,8 @@ DEFAULT MOBILE STYLING
   background-color: $lighter_grey;
   border-color: $lighter_grey;
   text-align: center;
+  float: right;
+  margin-top: -35px;
 }
 
 .constraints-group {
@@ -57,6 +58,7 @@ DEFAULT MOBILE STYLING
   width: fit-content;
   background-color: $white;
   font-size: 16px;
+  padding: 0 0 6px 3px;
 }
 
 .constraint-value.btn.btn-outline-secondary:hover {
