--- a/app/assets/stylesheets/customOverrides/show_page.scss
+++ b/app/assets/stylesheets/customOverrides/show_page.scss
@@ -203,6 +203,11 @@ dt.blacklight-ancestordisplaystrings_tesim.metadata-block__label-key {
   padding: 0.5rem 0.25rem 1rem;
 }
 
+// Cite Modal
+.modal-header {
+  justify-content: space-between;
+}
+
 .nav-link a {
   text-decoration: none;
 }
